# dslr

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
configs/: train_config.json
docs/: anal.md
shared_data/: weights.json
src/: config.py  data.py  describe.py  header.py  histogram.py  main.py  model.py  pair_plot.py  predict.py  scatter_plot.py  train_model.py  utils.py
src/cheats/: cheat.py
src/models/: LogisticRegression.py  OneVsRestClassifier.py
src/models/predict/: evaluate.py  logreg_predict.py
src/models/train/: LogisticRegression.py  features.py  logreg_train.py  training.py  visual_tools.py
src/predict/: evaluate.py  logreg_predict.py
src/predict_bkp/: logreg_predict.py
src/scripts/: describe.py  histogram.py  pair_plot.py  scatter_plot.py
src/train/: logreg_train.py  train_utils.py
src/utils/: __init__.py  header.py  load_csv.py  normalization.py  statistical_methods.py  train_test_split.py  visual_tools.py
