[project]
name = "dslr"
version = "0.1.0"
description = "Data Science & Logistic Regression — Hogwarts house classification (42 curriculum)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "seaborn>=0.12",
    "scikit-learn>=1.7"
]

[project.scripts]
describe = "scripts.describe:main"
histogram = "scripts.histogram:main"
scatter_plot = "scripts.scatter_plot:main"
pair_plot = "scripts.pair_plot:main"
logreg_train = "train.logreg_train:main"
logreg_predict = "predict.logreg_predict:main"
cheat = "cheats.cheat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/models", "src/predict", "src/scripts", "src/train", "src/utils"]
