[project]
name = "dslr"
version = "0.1.0"
description = "Data Science & Logistic Regression — Hogwarts house classification (42 curriculum)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "seaborn>=0.12",
    "scikit-learn>=1.7"
]

[project.optional-dependencies]
dev = [
    "flake8>=4.0.0",
    "pre-commit>=2.20.0",
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
]

[project.scripts]
# describe = "scripts.describe:main"
# histogram = "scripts.histogram:main"
# scatter_plot = "scripts.scatter_plot:main"
# pair_plot = "scripts.pair_plot:main"
train = "src.train_model:main"
predict = "src.predict:main"
# cheat = "cheats.cheat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
